--- a/Django_Docker/toolkeeper_app/templates/common_history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_add.html
@@ -5,7 +5,7 @@
     <div class="my-check col-12 col-lg-6 my-lg-3 mt-3 ps-md-0 d-flex align-items-end">
         <input class="btn-check" type="checkbox" id="check_{{ forloop.counter0 }}" name="check" disabled>
         <label class="btn my-btn-common my-check-green w-100" for="check_{{ forloop.counter0 }}" onclick="check_box('{{ forloop.counter0 }}');">
-            <span name="checked">チェック</span>
+            <span name="checked" style="width: 6rem;">　チェック　</span>
         </label>
     </div>
     
