--- a/Django_Docker/toolkeeper_app/templates/history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/history_add.html
@@ -64,62 +64,62 @@
         <div class="col-2 col-sm-1 col-md offset-9 offset-sm-10 offset-md-0 ps-3 ps-md-0" id="check_ctrl">
             <div class="row h-100">
                 <label class="col-auto mb-auto" for="slide_down">
-                    <button class="btn my-btn-common my-btn-green" id="slide_down">◀</button>
+                    <button class="btn my-btn-common my-check-green" id="slide_down">◀</button>
                 </label>
 
                 <div class="col" id="range_ctrl">
                     <input class="ms-2 ms-md-auto" type="range" id="all_check" min="0" max="10" step="1">
 
                     <div class="row row-cols-1 row-cols-md-auto g-0 justify-content-between w-100 ms-3 ms-md-auto" id="per_list">
-                        <span class="col h-auto px-0 position-relative" type="button" name="range_per">
-                            <button class="w-100 d-none d-md-inline">｜</button>
+                        <span class="col h-auto px-0 position-relative" type="button" name="range_per" style="color: red; font-weight: bold;">
+                            <span class="w-100 d-none d-md-inline">｜</span>
                             <span class="w-auto position-absolute" type="button" name="range_per">0%　</span>
                         </span>
-                        <span class="col h-auto px-0 position-relative" type="button" name="range_per">
-                            <button class="w-100 d-none d-md-inline">｜</button>
+                        <span class="col h-auto px-0 position-relative" type="button" name="range_per" style="color: rgb(255, 150, 30);">
+                            <span class="w-100 d-none d-md-inline">｜</span>
                             <span class="w-auto position-absolute" type="button" name="range_per">10%　</span>
                         </span>
-                        <span class="col h-auto px-0 position-relative" type="button" name="range_per">
-                            <button class="w-100 d-none d-md-inline">｜</button>
+                        <span class="col h-auto px-0 position-relative" type="button" name="range_per" style="color: rgb(255, 150, 30);">
+                            <span class="w-100 d-none d-md-inline">｜</span>
                             <span class="w-auto position-absolute" type="button" name="range_per">20%　</span>
                         </span>
-                        <span class="col h-auto px-0 position-relative" type="button" name="range_per">
-                            <button class="w-100 d-none d-md-inline">｜</button>
+                        <span class="col h-auto px-0 position-relative" type="button" name="range_per" style="color: rgb(255, 150, 30);">
+                            <span class="w-100 d-none d-md-inline">｜</span>
                             <span class="w-auto position-absolute" type="button" name="range_per">30%　</span>
                         </span>
-                        <span class="col h-auto px-0 position-relative" type="button" name="range_per">
-                            <button class="w-100 d-none d-md-inline">｜</button>
+                        <span class="col h-auto px-0 position-relative" type="button" name="range_per" style="color: rgb(255, 150, 30);">
+                            <span class="w-100 d-none d-md-inline">｜</span>
                             <span class="w-auto position-absolute" type="button" name="range_per">40%　</span>
                         </span>
-                        <span class="col h-auto px-0 position-relative" type="button" name="range_per">
-                            <button class="w-100 d-none d-md-inline">｜</button>
+                        <span class="col h-auto px-0 position-relative" type="button" name="range_per" style="color: gold;">
+                            <span class="w-100 d-none d-md-inline">｜</span>
                             <span class="w-auto position-absolute" type="button" name="range_per">50%　</span>
                         </span>
-                        <span class="col h-auto px-0 position-relative" type="button" name="range_per">
-                            <button class="w-100 d-none d-md-inline">｜</button>
+                        <span class="col h-auto px-0 position-relative" type="button" name="range_per" style="color: gold;">
+                            <span class="w-100 d-none d-md-inline">｜</span>
                             <span class="w-auto position-absolute" type="button" name="range_per">60%　</span>
                         </span>
-                        <span class="col h-auto px-0 position-relative" type="button" name="range_per">
-                            <button class="w-100 d-none d-md-inline">｜</button>
+                        <span class="col h-auto px-0 position-relative" type="button" name="range_per" style="color: gold;">
+                            <span class="w-100 d-none d-md-inline">｜</span>
                             <span class="w-auto position-absolute" type="button" name="range_per">70%　</span>
                         </span>
-                        <span class="col h-auto px-0 position-relative" type="button" name="range_per">
-                            <button class="w-100 d-none d-md-inline">｜</button>
+                        <span class="col h-auto px-0 position-relative" type="button" name="range_per" style="color: blue;">
+                            <span class="w-100 d-none d-md-inline">｜</span>
                             <span class="w-auto position-absolute" type="button" name="range_per">80%　</span>
                         </span>
-                        <span class="col h-auto px-0 position-relative" type="button" name="range_per">
-                            <button class="w-100 d-none d-md-inline">｜</button>
+                        <span class="col h-auto px-0 position-relative" type="button" name="range_per" style="color: blue;">
+                            <span class="w-100 d-none d-md-inline">｜</span>
                             <span class="w-auto position-absolute" type="button" name="range_per">90%　</span>
                         </span>
-                        <span class="col h-auto px-0 position-relative d-none d-md-inline" type="button" name="range_per">
-                            <button class="w-100 d-none d-md-inline">｜</button>
+                        <span class="col h-auto px-0 position-relative d-none d-md-inline" type="button" name="range_per" style="color: rgb(0, 220, 50);">
+                            <span class="w-100 d-none d-md-inline">｜</span>
                         </span>
                     </div>
-                    <span class="w-100 h-auto ms-3 mt-1 d-block d-md-none" type="button" name="range_per">100%　</span>
+                    <span class="h-auto ms-3 mt-1 d-block d-md-none" type="button" name="range_per" style="color: rgb(0, 220, 50); font-weight: bold; width: 2rem;">解除</span>
                 </div>
 
                 <label class="col-auto mt-auto mt-md-0" for="slide_up">
-                    <button class="btn my-btn-common my-btn-green" id="slide_up">▶</button>
+                    <button class="btn my-btn-common my-check-green" id="slide_up">▶</button>
                 </label>    
             </div>
         </div>
