--- a/Django_Docker/toolkeeper_app/templates/history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/history_add.html
@@ -67,7 +67,7 @@
                     <button class="btn my-btn-common my-check-green" id="slide_down">◀</button>
                 </label>
 
-                <div class="col" id="range_ctrl">
+                <div class="col" id="range_ctrl" style="overflow: hidden;">
                     <input class="ms-2 ms-md-auto" type="range" id="all_check" min="0" max="10" step="1">
 
                     <div class="row row-cols-1 row-cols-md-auto g-0 justify-content-between w-100 ms-3 ms-md-auto" id="per_list">
