--- a/Django_Docker/toolkeeper_app/templates/history_detail.html
+++ b/Django_Docker/toolkeeper_app/templates/history_detail.html
@@ -33,10 +33,10 @@
                     <ol class="row row-cols-1 row-cols-md-2 row-cols-lg-1 align-items-start d-lg-block w-100 mb-0 ps-5 my-position-lg-absolute" style="overflow: auto;">
                         {% for result in history.result_set.all %}
                             {% if result.result_class != 9 %}
-                            <li class="col mb-2 ps-1 pe-3 pe-sm-4 pe-lg-0">
-                                <div class="row row-cols-2 mx-auto pe-2 pe-xl-4">
-                                    <span class="col w-auto me-auto ps-0">{{ result.item.item_name }}</span>
-                                    <span class="col-auto me-sm-0 ps-0">：
+                            <li class="col mb-2 ps-1 pe-3 pe-sm-4 pe-lg-0 pe-xxl-4">
+                                <div class="row row-cols-2 justify-content-between mx-auto pe-3 pe-lg-0 pe-xl-4">
+                                    <span class="col w-auto me-auto px-0">{{ result.item.item_name }}</span>
+                                    <span class="col-auto ms-auto me-sm-0 px-0">：
                                         {% if result.result_class == 0 %}
                                             <u><font color="#ff6347">無し</font></u>
                                         {% elif result.result_class != 9 %}
