--- a/Django_Docker/toolkeeper_app/templates/index.html
+++ b/Django_Docker/toolkeeper_app/templates/index.html
@@ -39,13 +39,13 @@
 <section class="py-5" id="features">
     <div class="container px-5 my-5">
         <div class="row gx-5">
-            <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">あなたの物を管理できます。</h2></div>
+            <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">あなたの物を<span class="d-inline-block"></span>管理できます。</h2></div>
             <div class="col-lg-8">
                 <div class="row gx-5 row-cols-1 row-cols-md-2">
                     <div class="col mb-5 h-100">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-check2-square"></i></div>
                         <h2 class="h5">日々の確認作業を簡単に</h2>
-                        <p class="mb-0">物をまとめて撮影して一度に確認ができます。<br>手作業で確認する手間が省けるほか、再確認も手軽です。</p>
+                        <p class="mb-0">物をまとめて撮影して一度に<span class="d-inline-block">確認ができます。</span><br>手作業で確認する手間が省けるほか、再確認も手軽です。</p>
                     </div>
                     <div class="col mb-5 h-100">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-journal-bookmark"></i></div>
